<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:padding="@dimen/margin_default"
    tools:ignore="MissingConstraints,RtlSymmetry,ContentDescription,UselessParent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/script_name"
        android:theme="@style/AppTheme.NoActionBar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_margin="@dimen/margin_half"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_js"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/javascript"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_field" />

    <TextView
        android:id="@+id/tv_simple"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/simple_reply"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_js" />

</androidx.constraintlayout.widget.ConstraintLayout>