<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/margin_twice_half"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="@dimen/margin_twice_half"
        android:layout_marginEnd="1dp"
        android:elevation="0dp"
        app:elevation="0dp"
        app:cardElevation="1dp"
        app:cardBackgroundColor="@color/colorTwiceLightGray"
        app:cardCornerRadius="@dimen/margin_default"
        tools:ignore="MissingConstraints,ContentDescription,Useless,ButtonStyle">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="@dimen/margin_twice_half"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:focusableInTouchMode="true"
            tools:ignore="ContentDescription,Useless,ButtonStyle">

        <ImageView
                android:layout_gravity="center"
                android:tint="@color/colorYellow"
                android:src="@drawable/ic_baseline_adb_24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/iv_icon" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/nanumgothic"
            android:maxLength="12"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/database"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_icon" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:fontFamily="@font/nanumgothic"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/database"
            android:textColor="@color/colorGray"
            app:layout_constraintEnd_toStartOf="@+id/btn_view"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <Button
            android:id="@+id/btn_view"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/round_button_primary"
            android:elevation="@dimen/margin_default"
            android:fontFamily="@font/nanumgothic"
            android:text="@string/view"
            android:textColor="@color/colorWhite"
            app:elevation="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_half"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_remove"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/round_button_primary"
            android:backgroundTint="@color/colorPink"
            android:elevation="@dimen/margin_default"
            android:fontFamily="@font/nanumgothic"
            android:text="@string/remove"
            android:textColor="@color/colorWhite"
            app:elevation="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>