<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="HardcodedText,SmallSp"
    tools:showIn="@layout/activity_js_edit" >

    <com.sungbin.texteditor.library.ui.SimpleCodeEditor
        android:id="@+id/sce_editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolkey"
        android:layout_marginTop="@dimen/margin_half"
        app:sce_applyHighlighter="true"
        app:sce_lineColor="@color/colorGray"
        app:sce_lineNumberColor="@color/colorGray"
        app:sce_selectLineColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/append_auto"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/auto_complete_with_enter"
        android:textColor="@color/colorWhite"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <HorizontalScrollView
        android:id="@+id/toolkey"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/append_auto"
        android:background="@color/colorPrimary"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/action_indent"
                android:layout_width="49dp"
                android:layout_height="48dp"
                android:background="@null"
                android:tint="@color/colorWhite"
                android:contentDescription="@string/indent"
                android:src="@drawable/ic_baseline_format_indent_increase_24" />


            <ImageButton
                android:id="@+id/action_undo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:tint="@color/colorWhite"
                android:contentDescription="@string/undo_done"
                android:src="@drawable/ic_baseline_undo_24" />

            <ImageButton
                android:id="@+id/action_redo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:tint="@color/colorWhite"
                android:contentDescription="@string/redo_done"
                android:src="@drawable/ic_baseline_redo_24" />

            <TextView
                android:id="@+id/action_right_big"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="{"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_left_big"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="}"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_right_small"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="("
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_left_small"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text=")"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_big_quote"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="&quot;"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_small_quote"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="'"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_underbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="_"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_dot"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="."
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_end"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text=";"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="+"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="-"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>